--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,35 @@
+body{
+  background-color: #282c34;
+  color: #fff;
+  font-family: Arial, sans-serif;
+}
+
+.link{
+  color: #00ffe5;
+  text-decoration: none;
+}
+
+.link:hover{
+  text-decoration: underline;
+}
+
+.codigo{
+  font-size: 13px;
+  font-style: italic;
+  font-weight: 300;
+  color: #1dba49;
+  margin-top: -5px;
+  margin-bottom: -5px;
+}
+
 .App {
-  text-align: center;
+  text-align: left;
+  padding-top: 20px;
+  padding-left: 80px;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 12vmin;
   pointer-events: none;
 }
 
