--- a/src/App.css
+++ b/src/App.css
@@ -1,64 +1,27 @@
-body{
-  background-color: #282c34;
-  color: #fff;
-  font-family: Arial, sans-serif;
-}
-
-.link{
-  color: #00ffe5;
+*{
+  margin: 0;
+  padding: 0;
   text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
 }
 
-.link:hover{
-  text-decoration: underline;
+html{
+  scroll-behavior: smooth; /* PAGINA SUBIR MAIS LENTAMENTE */
 }
 
-.codigo{
-  font-size: 13px;
-  font-style: italic;
-  font-weight: 300;
-  color: #1dba49;
-  margin-top: -5px;
-  margin-bottom: -5px;
+textarea:focus, input:focus, select:focus{
+  box-shadow: 0 0 0 0;
+  box-shadow: none;
+  border: 0 none;
+  outline: 0;
 }
 
-.App {
-  text-align: left;
-  padding-top: 20px;
-  padding-left: 80px;
-}
-
-.App-logo {
-  height: 12vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body{
+  /* background-color: #282c34; */
+  background-color: #f0f2f3;
+  /* display: flex;
+  min-height: 100vh; */
+  /* flex-direction: column; */
+  font-family: 'Poppins', sans-serif;
 }
