--- a/src/Components/main.css
+++ b/src/Components/main.css
@@ -15,12 +15,22 @@
 
 /* ---------------------- INICIO MEU SISTEMA -------------------------- */
 
-.cx-coluna-um .principal {
+.cx-coluna-um .artigo-1 {
     background: rgb(47, 47, 73);
     color: #fff;
     font-size: .9em;
     padding: 0;
     font-family: 'Courier New', Courier, monospace;
+}
+
+.cx-coluna-um .artigo-2 {
+    background: rgb(47, 47, 73);
+    color: #fff;
+    /* font-size: .9em; */
+    /* padding: 0; */
+    font-family: 'Courier New', Courier, monospace;
+    height: auto;
+    /* display: block; */
 }
 
 .title {
