--- a/src/Components/footer.css
+++ b/src/Components/footer.css
@@ -7,10 +7,25 @@
 }
 
 .section-1{
+    width: 100%;
+    padding: 10px 0;
+    background-color: #3c474d;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.section-1 nav a{
+    font-size: 1rem;
+    /* text-decoration: underline; */
+}
+
+.section-2{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     text-align: center;
+    /* background-color: #5cb6c1; */
 }
 
 /* INÍCIO DA PRIMEIRA COLUNA */
@@ -24,16 +39,18 @@
     margin: 4px 16px;
     color: #a3a7a9;
     font-size: .9em;
+    text-decoration: underline;
 }
 
 .link:hover {
     text-decoration: none;
     color: #188391;
+    text-decoration: underline;
 }
 
 .siga-nos {
     margin: 12px 0;
-    font-size: .9em;
+    font-size: 1rem;
     color: #188391;
 }
 
@@ -60,6 +77,7 @@
 
 .primeiro-paragrafo{
     color: #188391;
+    font-size: 1rem;
 }
 
 .paragrafo-titulo{
@@ -74,26 +92,28 @@
 
 
 /* INÍCIO DA LINHA LOGO E COPYRIGHT */
-.section-2{
+.section-3{
     text-align: center;
     width: 100%;
     padding-bottom: 20px;
+    /* border-top: .04rem solid #a3a7a9; */
 }
 
 .linha{
     width: 96%;
-    height: .05rem;
+    height: .04rem;
     background-color: #a3a7a9;
     margin: 0 auto;
+    opacity: 30%;
 }
 
 .logo-footer {
-    width: 110px;
+    width: 130px;
     margin-top: 24px;
     margin-bottom: 7px;
 }
 
-.section-2 p{
+.section-3 p{
     margin-top: -16px;
 }
 
@@ -107,6 +127,10 @@
         display: flex;
         flex-flow: row wrap;
         flex-wrap: wrap;
+    }
+
+    .section-1{
+        text-align: center;
     }
 
     .coluna-um {
