--- a/src/Components/header.css
+++ b/src/Components/header.css
@@ -5,9 +5,10 @@
     width: 100%;
     height: auto;
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     justify-content: space-between;
     position: fixed;
+    z-index: 2;
 } 
 
 .cx-logo-header{
@@ -18,7 +19,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    /* background-color: #5cb6c1; */
+    background-color: #5cb6c1;
 }
 
 .cx-logo-header img{
@@ -32,7 +33,7 @@
     /* width: 63%; */
     height: 80px;
     /* position: relative; */
-    /* background-color: #5cb6c1; */
+    /* background-color: #cf9312; */
 }
 
 .cx-menu-h ul{
@@ -60,7 +61,9 @@
     color: #fff;
     cursor: pointer;
     letter-spacing: 1px;
-    transition: .5s;
+    font-size: 1em;
+    transition: .3s;
+    opacity: 85%;
 }
 
 .cx-menu-h span{
@@ -72,17 +75,21 @@
     color: #fff;
     cursor: pointer;
     letter-spacing: 1px;
-    transition: .5s;
+    font-size: 1em;
+    transition: .3s;
+    opacity: 85%;
 }
 
 .cx-menu-h a:hover{
     color: #11626d;
     font-weight: bold;
+    /* border-bottom: 2px solid darkred; */
 }
 
 .cx-menu-h span:hover{
     color: #11626d;
     font-weight: bold;
+    /* border-bottom: 2px solid darkred; */
 }
 
 /* xxxxxxxxxxxxxxxxx efeito dropdown quando clicado xxxxxxxxxxxxxxxxx */
@@ -115,11 +122,13 @@
     position: absolute;
     margin: 0;
     background-color: #5cb6c1;
+    border-top: 0.01em solid #fff;
 }
 
 .cx-menu-h ul ul li{
     height: 50px;
     line-height: 50px;
+    border-bottom: 0.01em solid #fff;
 }
 
 .cx-menu-h ul ul li a:hover{
@@ -145,8 +154,8 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    /* background-color: #5cb6c1; */
-    margin-right: 35px;
+    /* background-color: #1caa0f; */
+    /* margin-right: 35px; */
 }
 
 .btn-fechar{
@@ -159,8 +168,9 @@
     border: 0;
     outline: none;
     cursor: pointer;
+    display: block;
     /* position: fixed; */
-    right: 6rem;
+    /* right: 6rem; */
 }
 
 .btn-login{
@@ -168,11 +178,12 @@
     letter-spacing: 1px;
     padding: 6px 12px;
     border-radius: 25px;
-    transition: .5s;
+    transition: .3s;
+    background-color: #188391;
 }
 
 .btn-login:hover{
-    background-color: #188391;
+    background-color: #0b5b66;
 }
 
 .cx-pesquisar .btn-login-mobile{
@@ -185,7 +196,7 @@
     border-radius: 25px;
     cursor: pointer;
     background-color: #188391;
-    transition: .5s;
+    transition: .3s;
     position: fixed;
     box-sizing: border-box;
     display: none;
@@ -211,41 +222,62 @@
 /* INÍCIO DO DROPDOWN FORMULARIO LOGIN */
 
 #dropdown-alterar{
-    width: auto;
-    height: auto;
+    width: 100%;
+    cursor: auto;
     border: 0;
     border-radius: 0;
     padding: 0;
-    /* margin-top: 1; */
-    /* margin-right: 30px; */
+    margin: 0;
+    background: transparent;
+    right: 0;
+    left: 0;
+    top: 0;
+    bottom: 0;
+}
+
+.container-formulario-login {
+    width: 100%;
+    height: 280px;
+    margin-top: 17px;
+    /* background: #5cb6c1; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .form-login-dropdown{ 
-    width: 300px; 
-    height: auto;
+    width: 500px;
+    height: 300px;
     /* border: 0;  */
     background: #5cb6c1; 
     outline: none; 
-    padding: 15px;
+    padding: 10px;
+    top: 48px;
     color: #fff; 
-    /* border-radius: 3px; */
-    cursor: auto; 
-    top: 12px; 
-    right: 65px; 
-    position: fixed; 
-    margin: 0;
+    /* border: 1px solid #fff; */
+    /* cursor: auto;  */
+    /* margin-left: 7px; */
+    position: fixed;
+    text-align: center;
+    box-shadow: 0 1px 5px rgba(44, 44, 44);
+}
+
+.form-login-dropdown h4{ 
+    margin-top: 8px;
+    padding-bottom: 5px;
 }
 
 .form-login-dropdown label{
-    padding-bottom: 0; font-size: 1em; 
+    /* padding-bottom: 0;  */
+    font-size: 1em; 
     letter-spacing: 2px;
 }
 
 .input-login-navbar{
-    font-size: .9em; 
+    font-size: 1.1em; 
     padding: 9px 10px; 
-    margin-bottom: 13px; 
-    width: 270px; height: 38px; 
+    margin-top: -1px; 
+    width: 300px; height: 45px; 
     border: 1px solid #188391; 
     border-radius: 3px;
     outline: none; background-color: #fff; 
@@ -259,9 +291,9 @@
 
 .button-login-navbar{
     background-color: #188391; color: #fff; 
-    font-size: 1.1em; 
-    outline: none; margin-top: 8px; padding: 6px; 
-    width: 270px; height: 40px; 
+    font-size: 1.2em; 
+    outline: none; margin-top: 3px; padding: 6px; 
+    width: 300px; height: 45px; 
     cursor: pointer; border: 0; transition: .5s; 
     letter-spacing: 2px; border-radius: 3px;
 }
@@ -271,11 +303,12 @@
 }
 
 .esqueci-cadastre{
-    margin-top: 13px; text-align: center;
+    margin-top: 17px; text-align: center;
 }
 
 .esqueci-cadastre a{
-    margin-top: 13px; font-size: 0.8em; 
+    /* margin-top: 13px;  */
+    font-size: 1em; 
     text-align: center; 
     letter-spacing: 1px; 
     color: #fff;
@@ -306,6 +339,7 @@
 .btn-search i{
     background-color: #fff;
     padding: 9px;
+    margin-right: 1rem;
     border-radius: 100%;
     font-size: 1.1em;
     color: #188391;
@@ -323,32 +357,43 @@
     right: 10px;
 }
 
-.form-search-dropdown{ 
-    width: 440px; 
+.container-formulario-search {
+    width: 100%;
     height: 90px;
-    background: #5cb6c1; 
-    outline: none; 
-    color: #fff; 
-    cursor: auto; 
-    top: 16px;
-    right: 35px;
-    position: fixed;
-    /* text-align: center; */
-    margin: 0;
-    display: inline-flex;
-    /* padding: 2px 10px; */
+    margin-top: 22px;
+    /* background: #5cb6c1; */
+    display: flex;
     justify-content: center;
     align-items: center;
 }
 
+.form-search-dropdown{ 
+    width: 80%;
+    height: 70px;
+    /* background: #5cb6c1; */
+    background: #4b6161;
+    outline: none; 
+    color: #fff;
+    /* border: 1px solid #fff; */
+    cursor: auto; 
+    /* top: 32px; */
+    margin-left: 25px;
+    /* position: fixed; */
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 1px 5px rgba(44, 44, 44);
+}
+
 .input-search{
     font-size: 1em; 
-    padding-left: 8px;
-    margin-top: 9px;
-    width: 290px; 
-    height: 35px; 
+    padding-left: 10px;
+    /* margin-top: 9px; */
+    width: 60%; 
+    height: 40px; 
     /* border: 0; */
-    border: 1px solid #188391; 
+    border: 1px solid #188391;
+    /* border-radius: 25px; */
     background-color: #fff; 
     letter-spacing: 1px;
 }
@@ -363,16 +408,17 @@
     color: #fff; 
     font-size: 1em; 
     width: 100px; 
-    height: 35px; 
+    height: 40px; 
     cursor: pointer; 
     border: 0; 
     transition: .5s;
     letter-spacing: 2px;
-    margin-top: 9px;
+    /* margin-top: 9px; */
 }
 
 .button-submit-search:hover{
-    background-color: #262A30;
+    /* background-color: #262A30; */
+    background-color: #0b5b66;
 }
 
 /* FIM DO DROPDOWN FORMULARIO PESQUISAR */
@@ -443,22 +489,30 @@
 
 @media screen and (max-width: 895px) {
     .cx-logo-header{
-        margin-left: 68px;
+        margin-left: 35%;
+    }
+
+    .cx-logo-header img{
+        width: 140px;
     }
 
     .cx-menu-h{
         display: none;
     }
 
+    .btn-login{
+        display: none;
+    }
+
     .form-search-dropdown{ 
-        width: 350px; 
+        width: 94%;
     }
     
     .input-search{
-        width: 250px; 
+        width: 72%; 
     }
-    
+        
     .button-submit-search{
-        width: 80px; 
+        width: 22%; 
     }
 }
