--- a/src/Components/navbar.css
+++ b/src/Components/navbar.css
@@ -87,8 +87,8 @@
 
 .menu{
     position: fixed;
-    top: 0;
-    left: 0;
+    top: 50%;
+    left: 50%;
     width: 100%;
     height: 100%;
     visibility: hidden;
@@ -96,13 +96,16 @@
 
 .menu > div{
     position: absolute;
-    top: 50%;
-    left: 50%;
+    /* top: 50%; */
+    /* top: 0; */
+    /* left: 50%; */
     transform: translateX(-150%) translateY(-100%);
+    /* width: 100vw; */
     width: 800px;
+    /* height: 100vh; */
     height: 1300px;
     border-radius: 50%;
-    background-color: #196da2;
+    background-color: rgba(92, 181, 193, 0.973);
     display: flex;
     justify-content: center;
     align-items: center;
