--- a/src/Components/header.css
+++ b/src/Components/header.css
@@ -358,26 +358,26 @@
 }
 
 .container-formulario-search {
-    width: 100%;
+    width: 105%;
     height: 90px;
-    margin-top: 22px;
+    margin-top: -52px;
     /* background: #5cb6c1; */
     display: flex;
-    justify-content: center;
-    align-items: center;
+    /* justify-content: center; */
+    /* align-items: center; */
 }
 
 .form-search-dropdown{ 
-    width: 80%;
-    height: 70px;
+    width: 100%;
+    height: 85px;
     /* background: #5cb6c1; */
-    background: #4b6161;
+    background: #5cb6c1;
     outline: none; 
     color: #fff;
     /* border: 1px solid #fff; */
     cursor: auto; 
     /* top: 32px; */
-    margin-left: 25px;
+    /* margin-left: 25px; */
     /* position: fixed; */
     display: inline-flex;
     justify-content: center;
@@ -505,14 +505,14 @@
     }
 
     .form-search-dropdown{ 
-        width: 94%;
+        width: 100%;
     }
     
-    .input-search{
-        width: 72%; 
-    }
+    /* .input-search{
+        width: 65%; 
+    } */
         
-    .button-submit-search{
-        width: 22%; 
-    }
+    /* .button-submit-search{
+        width: 20%; 
+    } */
 }
