Alterando cor background navbar

--- a/src/Components/navbar.css
+++ b/src/Components/navbar.css
@@ -105,7 +105,8 @@
     /* height: 100vh; */
     height: 1300px;
     border-radius: 50%;
-    background-color: rgba(92, 181, 193, 0.973);
+    /* background-color: rgba(92, 181, 193, 0.973); */
+    background-color: rgba(38, 42, 48, 0.9);
     display: flex;
     justify-content: center;
     align-items: center;
