--- a/src/Components/navbar.css
+++ b/src/Components/navbar.css
@@ -106,7 +106,7 @@
     height: 1300px;
     border-radius: 50%;
     /* background-color: rgba(92, 181, 193, 0.973); */
-    background-color: rgba(38, 42, 48, 0.9);
+    background-color: rgba(38, 42, 48);
     display: flex;
     justify-content: center;
     align-items: center;
